update handling settings in expert mode

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1043,10 +1043,11 @@
                                 </div>
 
                                 <!-- Update Handling Section -->
-                                <div class="mb-4">
+                                <div class="mb-4" x-show="expertMode" x-transition>
                                     <h6 class="border-bottom pb-2">
                                         <i class="fas fa-cog me-2"></i>
                                         Update Handling
+                                        <small class="text-muted ms-2">(Expert Mode)</small>
                                     </h6>
                                     
                                     <div class="row">
